# fymail

./: .gitignore  CONTRIBUTING.md  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: ci.yaml
examples/: bulk.py  tutorial.py
src/fymail/: __init__.py  error.py  fymail.py  provider_manager.py
src/fymail/providers/base/: provider_base.py  rule_base.py
src/fymail/providers/github/: __init__.py  github.py
src/fymail/providers/github/rules/: commits.py  events.py  profile.py  users.py
src/fymail/utils/: collect.py
tests/integration/: test_github.py
