[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fymail"
dynamic = ["version"]
description = 'Find email for giving account in provider'
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = [
    "email",
]
authors = [
    { name = "Jay Chung", email = "zhongjiajie955@gmail.com" },
]
classifiers = [
    # https://pypi.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: User Interfaces",
]
dependencies = [
    "aiohttp>=3.7.4",
]

[project.urls]
Documentation = "https://github.com/zhongjiajie/fymail#readme"
Issues = "https://github.com/zhongjiajie/fymail/issues"
Source = "https://github.com/zhongjiajie/fymail"

[tool.hatch.version]
path = "src/fymail/__init__.py"

[tool.hatch.envs.test]
extra-dependencies = [
    "pytest-asyncio",
]

[tool.hatch.envs.types]
extra-dependencies = [
    "mypy>=1.0.0",
]

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/fymail tests}"

[tool.ruff.format]
preview = true

[tool.ruff.lint]
preview = true

[tool.ruff.lint.extend-per-file-ignores]
"examples/*" = [
    "INP001",
    "T201"
]

[tool.ruff.lint.isort]
known-first-party = ["fymail"]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fymail"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
source_pkgs = ["fymail"]
branch = true
parallel = true
omit = [
    "src/fymail/__about__.py",
]

[tool.coverage.paths]
fymail = ["src/fymail", "*/fymail/src/fymail"]
tests = ["tests", "*/fymail/tests"]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
